updated directory and formatted file output

--- a/storepage_price_lookup.ipynb
+++ b/storepage_price_lookup.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['$5.97', '$26.11', '$11.78', '$26.99', '$7.67', '$8.44', '$30.39', '$23.24', '$30.39', '$14.97', '$15.99', '$112.25', '$29', '$12.50', '$41.00', '$11.95', '$33.00', '$11.19', '$22.87', '$21.84', '$27.00', '$10.02', 'Currently Unavailable  ', '$17.98', '$22.99', '$10.97', '$168.00', '$16.99', '$43.99', '$59.87', '$7.97', '$36.70', '$37.53', '$28.39', '$24', '$13.13', '$18.41', '$8.25', '$84.99', '$23.99', '$10.97', '$34.98', '$4.94', '$25.93', '$99.99', '$99.00', '$8.49', '$12.48', 'Currently Unavailable', '$7.78', 'Page Not Found ʢ・●・ʡ', '$14.99', '$88.49', '$5.68', '$11.97', '$6.99', '$29.13', '$49.99', '$8.84', '$14.99', '$34.97', '$16.88', '$14.99', '$13.71', '$13.96', '$34.99', '$123.59', '$16.99', '$14.39', '$13.56', '$3.57', '$21.95', '$13.95', '$11.91', '$26.99', 'Page Not Found ʢ・●・ʡ', '$16.59', '$78.89', '$11.97', '$20.99', 'Page Not Found ʢ・●・ʡ', '$43.00', '$21.87', '$4.47', '$11.43', '$12.96', '$39.99', '$159.99', '$34.99', '$84.99', '$9.32', '$29.92', '$24.00', '$13.47', '$28.99', 'Page Not Found ʢ・●・ʡ', '$40.99', '$28.00', '$50.44', '$26.49', '$16.99', '$79.99', '$4.33', '$9.97', '$13.48', '$119.99', '$79.90', '$29.99', '$4.47', 'Page Not Found ʢ・●・ʡ', '$15.00', '$3.82', '$27.98', '$379.00', '$34.97', '$11.32', '$29', 'Currently Unavailable  ', '$55.00', '$36.71', '$79.89', '$16.90', '$18.39', '$36.99', 'Page Not Found ʢ・●・ʡ', 'Page Not Found ʢ・●・ʡ', '$89.00', '$6.23', '$17.32', '$29.99', '$15.00', '$24.00', '$39.99', '$9.18', '$69.95', '$15.10', '$11.25', '$25.00', '$3.98', '$19.95', '$8.98', '$7.82', '$46.19', '$10.24', '$9.98', '$13.23', '$16.99', 'Currently Unavailable  ', '$9.99', '$51.21', '$36.12', '$16.97', '$26.99', '$36.12', 'Page Not Found ʢ・●・ʡ', '$43.99', '$22.98', 'Currently Unavailable  ', '$59.95', '$8.99', '$6.04', '$10.84', '$129.99', '$59.99', '$39.99', '$34.97', '$149.95', '$9.77', '$7.96', '$11.57', '$17.54', '$45.99', '$39.99', '$0.98', '$15.00', '$17.99', '$129.95', '$6.97', '$20.49', 'Page Not Found ʢ・●・ʡ', 'Currently Unavailable', '$24.60', '$14.97', '$13.99', '$32.54', '$40.87', '$15.26', '$29.97', '$19.97', '$3.19', '$15.94', 'Currently Unavailable  ', '$9.58', '$16.99', '$89.99', '$9.81', '$16.97', '$10.16', '$7.29', '$9.85', '$101.24', '$8.80', 'Page Not Found ʢ・●・ʡ', '$15.97', '$18.94', '$84.89', '$14.97', '$15.38', 'Currently Unavailable  ', '$30.95', '$4.60', '$29.00', '$16.00', '$9.88', '$7.99', '$199.00', '$91.62', '$18.99', '$119.99', '$199.00', '$49.99', '$99.99', '$29.88', '$13.97', '$29.97', '$14.98', '$44.74', '$16.88', 'Page Not Found ʢ・●・ʡ', '$29.99', '$14.49', '$22.39', '$10.90', '$124.99', '$31.49', '$29.99', '$19.90', '$6.99', '$22.03', '$39.99', '$96.99', '$30.00', '$47.95', '$29.99', '$26.99', '$8.81', '$16.19', '$9.43', '$29.99', '$459.00', '$11.99', '$13.59', '$20.99', '$11.99', '$16.00', '$70.00', '$36.00', '$15.99', '$13.99', '$5.49', '$149.95', '$42.96', '$48.99', '$19.74', '$32.99', '$18.00', '$35.00', 'Currently Unavailable  ', '$19.99', '$13.86', 'Currently Unavailable  ', '$7.06', '$6.49', '$1.60', '$19.99', '$12.25', '$5.98', '$9.39', '$39.60', 'Currently Unavailable  ', '$53.00', '$6.69', '$25.00', '$79.95', '$34.98', '$89.99', '$14.99', '$4.99', '$19.89', '$19.26', '$49.00', '$139.99', '$12.98', '$9.30', '$5.00', '$16.69', '$29.97', '$319.00', '$9.42', 'Currently Unavailable  ']\n"
+      "['$5.97', '$26.11', '$11.78', '$26.99', '$7.67', '$8.44', '$37.97', '$23.24', '$37.99', '$14.97', '$15.99', '$163.48', '$28', '$17.38', '$41.00', '$11.95', '$33.00', '$14.50', '$22.87', '$21.84', '$27.00', '$10.02', 'Currently Unavailable  ', '$17.98', '$19.97', '$10.97', '$168.00', '$17.04', '$43.99', '$59.87', '$7.97', '$36.73', '$37.53', '$28.39', '$23.24', '$13.11', '$16.88', '$8.25', '$84.99', '$23.99', '$10.97', '$34.99', '$4.94', '$25.93', '$92.76', '$99.00', '$8.49', '$10.39', 'Currently Unavailable  ', '$7.78', 'Page Not Found ʢ・●・ʡ', '$14.99', '$88.49', '$5.68', '$11.97', '$6.99', '$32.77', '$49.99', '$8.85', '$12.99', '$34.97', '$16.88', '$14.99', '$7.99', '$13.95', '$29.46', '$123.59', '$16.99', '$17.99', '$13.56', '$3.57', '$21.95', '$13.95', '$11.91', '$26.99', 'Page Not Found ʢ・●・ʡ', '$16.28', '$105.14', '$10.19', '$21.68', 'Page Not Found ʢ・●・ʡ', '$43.00', '$24.87', '$4.47', '$11.99', '$12.96', '$39.99', '$159.99', '$34.99', '$84.99', '$9.32', '$29.92', '$24.00', '$13.47', '$28.99', 'Page Not Found ʢ・●・ʡ', '$40.77', 'Currently Unavailable  ', '$59.34', '$26.49', '$12.40', '$79.99', '$4.39', '$9.97', '$13.48', '$119.99', '$79.90', '$29.99', '$4.47', 'Page Not Found ʢ・●・ʡ', '$15.00', '$3.32', '$27.98', '$379.00', '$34.97', '$11.99', '$9.95', 'Currently Unavailable  ', '$43.70', 'Currently Unavailable  ', '$79.99', '$19.99', '$16.83', '$36.99', 'Page Not Found ʢ・●・ʡ', 'Page Not Found ʢ・●・ʡ', '$89.00', '$6.23', '$17.32', '$29.99', '$21.95', '$21.45', '$39.99', '$9.00', '$62.70', '$15.41', '$11.70', '$25.00', '$3.98', '$19.95', '$8.98', '$6.98', '$44.19', '$10.24', '$9.98', '$13.29', '$16.99', 'Currently Unavailable  ', '$10.99', '$61.30', '$36.12', '$15.72', '$26.99', '$36.12', 'Page Not Found ʢ・●・ʡ', '$43.99', '$22.98', 'Currently Unavailable', '$59.95', '$8.99', '$6.04', '$8.87', '$129.99', '$59.46', '$39.99', '$34.97', '$149.95', '$9.77', '$7.96', '$11.57', '$17.54', '$45.99', '$39.99', '$0.98', '$15.00', '$17.99', '$129.95', '$6.97', '$20.49', 'Page Not Found ʢ・●・ʡ', 'Currently Unavailable  ', '$24.91', '$14.97', '$13.99', '$32.54', '$33.82', '$19.95', '$29.97', '$19.97', '$3.33', '$15.99', 'Currently Unavailable  ', '$8.15', '$16.99', '$89.99', '$8.99', '$17.98', '$10.16', '$7.29', '$9.85', '$104.99', '$8.80', 'Page Not Found ʢ・●・ʡ', '$15.97', '$18.94', '$59.89', '$8.99', '$15.38', 'Currently Unavailable  ', '$31.24', '$4.60', '$29.00', '$16.00', '$9.88', '$9.99', '$199.00', '$91.62', '$18.99', '$119.99', '$219.00', '$53.10', '$124.99', '$29.88', '$13.97', '$29.97', '$14.98', '$38.24', '$16.88', 'Page Not Found ʢ・●・ʡ', '$29.99', '$14.49', '$18.47', '$10.90', '$124.99', '$31.49', '$23.95', '$19.90', '$6.99', '$21.98', '$39.99', '$107.99', '$30.00', '$49.49', '$19.97', '$26.99', '$8.99', '$16.19', '$9.97', '$29.99', '$459.00', '$10.80', '$15.99', '$17.84', '$11.99', '$16.00', '$70.00', '$36.00', '$19.99', '$13.99', '$5.49', '$149.95', '$48.39', '$48.99', '$18.95', '$32.99', '$18.00', '$32.50', '$23.90', '$18.99', '$13.86', 'Currently Unavailable  ', '$7.06', '$6.49', '$1.60', '$15.99', '$12.25', '$5.98', '$9.39', '$39.60', 'Currently Unavailable  ', '$53.00', '$6.69', '$25.00', '$79.95', '$26.94', '$89.99', '$14.99', '$4.99', '$19.89', '$18.94', '$46.83', '$139.99', '$12.98', '$10.31', '$5.00', '$15.47', '$24.99', '$319.00', '$9.42', 'Currently Unavailable  ']\n"
      ]
     }
    ],
@@ -46,7 +46,7 @@
     "    try: \n",
     "        price = soup.find_all('span', {'class': 'a-offscreen'})[0].get_text().replace('Page 1 of 1', 'Currently Unavailable')\n",
     "    except: \n",
-    "        price = 'Page Not Found ʢ・●・ʡ'\n",
+    "        price = 'Page Not Found'\n",
     "\n",
     "    prices.append(price)\n",
     "\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
     "    'price' : prices}, \n",
     "    columns=['asin', 'price'])\n",
     "\n",
-    "asin_price.to_excel('asin_price_list.xlsx')"
+    "asin_price.to_csv('./output/asin_price_list.csv', index=False)"
    ]
   }
  ],
